Add youtube provider

--- a/src/v00v.Services/v00v.Services.csproj
+++ b/src/v00v.Services/v00v.Services.csproj
@@ -11,6 +11,7 @@
 
   <Import Project="..\..\build\ReferenceAssemblies.props" />
   <Import Project="..\..\build\Ef.props" />
+  <Import Project="..\..\build\Newton.props" />
   
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="obj\**" />
