--- a/src/v00v.ViewModel/v00v.ViewModel.csproj
+++ b/src/v00v.ViewModel/v00v.ViewModel.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Compile Remove="Popup\Channel\ChannelPopupLogic.cs" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\v00v.Model\v00v.Model.csproj" />
     <ProjectReference Include="..\v00v.Services\v00v.Services.csproj" />
   </ItemGroup>
