--- a/src/v00v/v00v.csproj
+++ b/src/v00v/v00v.csproj
@@ -8,11 +8,17 @@
 
   <Import Project="..\..\build\ReferenceAssemblies.props" />
   <Import Project="..\..\build\Rx.props" />
+  <Import Project="..\..\build\Ext.props" />
   <Import Project="..\..\build\Avalonia.props" />
   <Import Project="..\..\build\Avalonia.Desktop.props" />
   <ItemGroup>
     <ProjectReference Include="..\v00v.MainApp\v00v.MainApp.csproj" />
     <ProjectReference Include="..\v00v.Services\v00v.Services.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
