--- a/src/v00v.Services/v00v.Services.csproj
+++ b/src/v00v.Services/v00v.Services.csproj
@@ -20,5 +20,9 @@
   <ItemGroup>
     <ProjectReference Include="..\v00v.Model\v00v.Model.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Synchronization\" />
+  </ItemGroup>
 
 </Project>
