--- a/src/v00v/v00v.csproj
+++ b/src/v00v/v00v.csproj
@@ -8,7 +8,7 @@
 
   <Import Project="..\..\build\ReferenceAssemblies.props" />
   <Import Project="..\..\build\Rx.props" />
-  <Import Project="..\..\build\Ext.props" />
+  <Import Project="..\..\build\ExtJson.props" />
   <Import Project="..\..\build\Avalonia.props" />
   <Import Project="..\..\build\Avalonia.Desktop.props" />
   <ItemGroup>
