Add search and popular

--- a/src/v00v.Views/v00v.Views.csproj
+++ b/src/v00v.Views/v00v.Views.csproj
@@ -12,7 +12,15 @@
   <Import Project="..\..\build\ReferenceAssemblies.props" />
   <Import Project="..\..\build\Rx.props" />
   <Import Project="..\..\build\Avalonia.props" />
-  <Import Project="..\..\build\EmbedXaml.props" />
+  <ItemGroup>
+    <Compile Update="**\*.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <AvaloniaResource Include="**\*.xaml">
+      <SubType>Designer</SubType>
+    </AvaloniaResource>
+  </ItemGroup>
   
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="obj\**" />
