--- a/src/v00v/v00v.csproj
+++ b/src/v00v/v00v.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
+    <PublishTrimmed>true</PublishTrimmed>
     <IsPackable>False</IsPackable>
   </PropertyGroup>
 
