Revert nuget update

--- a/src/v00v.Services/v00v.Services.csproj
+++ b/src/v00v.Services/v00v.Services.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <Import Project="..\..\build\ReferenceAssemblies.props" />
-  <Import Project="..\..\build\Ef.props" />
+  <Import Project="..\..\build\EntityFramework.props" />
   <Import Project="..\..\build\NewtonSoft.props" />
   
   <ItemGroup>
