--- a/src/v00v.ViewModel/v00v.ViewModel.csproj
+++ b/src/v00v.ViewModel/v00v.ViewModel.csproj
@@ -14,6 +14,7 @@
   <Import Project="..\..\build\EmbedXaml.props" />
   <Import Project="..\..\build\DynamicData.props" />
   <Import Project="..\..\build\LazyCache.props" />
+  <Import Project="..\..\build\ReactiveUI.props" />
   
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="obj\**" />
