--- a/src/v00v/v00v.csproj
+++ b/src/v00v/v00v.csproj
@@ -7,10 +7,11 @@
     <IsPackable>False</IsPackable>
   </PropertyGroup>
 
-  
   <Import Project="..\..\build\ExtJson.props" />
   <Import Project="..\..\build\Avalonia.props" />
   <Import Project="..\..\build\Avalonia.Desktop.props" />
+  <Import Project="..\..\build\Avalonia.ReactiveUI.props" />
+  
   <ItemGroup>
     <ProjectReference Include="..\v00v.MainApp\v00v.MainApp.csproj" />
     <ProjectReference Include="..\v00v.Services\v00v.Services.csproj" />
