Add dispatcher, change to 3.1 ef

--- a/src/v00v.Services/v00v.Services.csproj
+++ b/src/v00v.Services/v00v.Services.csproj
@@ -12,6 +12,7 @@
  
   <Import Project="..\..\build\EntityFramework.props" />
   <Import Project="..\..\build\NewtonSoft.props" />
+  <Import Project="..\..\build\Quartz.props" />
   
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="obj\**" />
