--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -4,8 +4,8 @@
     "YouParser": "youtube-dl",
     "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
     "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
-    "EnableSchedule": "false",
-    "TimeSchedule(HH:mm)": "23:59",
-    "RepeatSchedule(sec)": "1800"
+    "EnableSchedule": "true",
+    "TimeSchedule(HH:mm)": "03:30",
+    "RepeatSchedule(sec)": "-1"
   }
 }
