--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -1,11 +1,12 @@
 {
-  "AppSettings": {
-    "BaseDir": "d:\\YT",
-    "YouParser": "youtube-dl",
-    "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
-    "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
-    "EnableSchedule": "true",
-    "TimeSchedule(HH:mm)": "03:30",
-    "RepeatSchedule(sec)": "-1"
-  }
+    "AppSettings": {
+        "BaseDir": "d:\\YT",
+        "YouParser": "youtube-dl",
+        "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
+        "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
+        "EnableDailySchedule": "False",
+        "TimeSchedule(HH:mm)": "03:30",
+        "EnableRepeatSchedule": "False",
+        "RepeatSchedule(min)": "60"
+    }
 }
