Add parser update

--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -4,9 +4,11 @@
         "YouParser": "youtube-dl",
         "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
         "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
-        "EnableDailySchedule": "False",
-        "TimeSchedule(HH:mm)": "03:30",
-        "EnableRepeatSchedule": "False",
-        "RepeatSchedule(min)": "60"
+        "EnableDailySyncSchedule": "False",
+        "DailySyncSchedule(HH:mm)": "03:30",
+        "EnableRepeatSyncSchedule": "False",
+        "RepeatSyncSchedule(min)": "60",
+        "EnableParserUpdateSchedule": "False",
+        "ParserUpdateSchedule(HH:mm)": "03:00"
     }
 }
