Add custom db location option

--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -1,6 +1,8 @@
 {
     "AppSettings": {
-        "BaseDir": "d:\\YT",
+        "EnableCustomDb": "True",
+        "DbDir": "c:\\Users\\vkoshelev\\Documents",
+        "DownloadDir": "d:\\YT",
         "YouParser": "youtube-dl",
         "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
         "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
