--- a/src/v00v.Views/v00v.Views.csproj
+++ b/src/v00v.Views/v00v.Views.csproj
@@ -10,7 +10,16 @@
   </PropertyGroup>
  
   <Import Project="..\..\build\Avalonia.props" />
-  <Import Project="..\..\build\EmbedXaml.props" />
+  <!--<Import Project="..\..\build\EmbedXaml.props" />-->
+  <ItemGroup>
+    <Compile Update="**\*.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <AvaloniaResource Include="**\*.xaml">
+      <SubType>Designer</SubType>
+    </AvaloniaResource>
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="obj\**" />
