--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -6,11 +6,20 @@
         "YouParser": "youtube-dl",
         "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
         "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
+
         "EnableDailySyncSchedule": "False",
-        "DailySyncSchedule(HH:mm)": "03:30",
+        "DailySyncSchedule": "03:30",
         "EnableRepeatSyncSchedule": "False",
-        "RepeatSyncSchedule(min)": "60",
-        "EnableParserUpdateSchedule": "False",
-        "ParserUpdateSchedule(HH:mm)": "03:00"
+        "RepeatSyncSchedule": "60",
+
+        "EnableDailyParserUpdateSchedule": "True",
+        "DailyParserUpdateSchedule": "09:29",
+        "EnableRepeatParserUpdateSchedule": "False",
+        "RepeatParserUpdateSchedule": 180,
+
+        "EnableDailyDataBackupSchedule": "False",
+        "DailyDataBackupSchedule": "02:00",
+        "EnableRepeatDataBackupSchedule": "False",
+        "RepeatDataBackupSchedule": 60
     }
 }
