--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -1,25 +1,25 @@
 {
     "AppSettings": {
-        "EnableCustomDb": "True",
-        "DbDir": "c:\\Users\\vkoshelev\\Documents",
-        "DownloadDir": "d:\\YT",
+        "EnableCustomDb": "False",
+        "DbDir": "",
+        "DownloadDir": "",
         "YouParser": "youtube-dl",
-        "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
+        "WatchApp": "",
         "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
 
         "EnableDailySyncSchedule": "False",
-        "DailySyncSchedule": "03:30",
+        "DailySyncSchedule": "07:01",
         "EnableRepeatSyncSchedule": "False",
         "RepeatSyncSchedule": "60",
 
-        "EnableDailyParserUpdateSchedule": "True",
+        "EnableDailyParserUpdateSchedule": "False",
         "DailyParserUpdateSchedule": "09:29",
         "EnableRepeatParserUpdateSchedule": "False",
         "RepeatParserUpdateSchedule": 180,
 
-        "EnableDailyDataBackupSchedule": "False",
-        "DailyDataBackupSchedule": "02:00",
-        "EnableRepeatDataBackupSchedule": "False",
-        "RepeatDataBackupSchedule": 60
+        "EnableDailyBackupSchedule": "False",
+        "DailyBackupSchedule": "21:01",
+        "EnableRepeatBackupSchedule": "False",
+        "RepeatBackupSchedule": 360
     }
 }
