--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -1,22 +1,20 @@
 {
     "AppSettings": {
         "EnableCustomDb": "False",
-        "DbDir": "",
-        "DownloadDir": "",
+        "DbDir": "C:\\Users\\vkoshelev\\Documents\\YT",
+        "DownloadDir": "d:\\YT",
         "YouParser": "youtube-dl",
-        "WatchApp": "",
+        "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
         "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
-
+        "YouApiKey": "AIzaSyDfdgAVDXbepYVGivfbgkknu0kYRbC2XwI",
         "EnableDailySyncSchedule": "False",
-        "DailySyncSchedule": "07:01",
+        "DailySyncSchedule": "06:31",
         "EnableRepeatSyncSchedule": "False",
         "RepeatSyncSchedule": "60",
-
         "EnableDailyParserUpdateSchedule": "False",
-        "DailyParserUpdateSchedule": "09:29",
+        "DailyParserUpdateSchedule": "10:17",
         "EnableRepeatParserUpdateSchedule": "False",
         "RepeatParserUpdateSchedule": 180,
-
         "EnableDailyBackupSchedule": "False",
         "DailyBackupSchedule": "21:01",
         "EnableRepeatBackupSchedule": "False",
