--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -1,7 +1,7 @@
 {
     "AppSettings": {
         "EnableCustomDb": "False",
-        "DbDir": ",
+        "DbDir": "",
         "DownloadDir": "",
         "YouParser": "youtube-dl",
         "WatchApp": "",
