--- a/NuGet.Config
+++ b/NuGet.Config
@@ -6,5 +6,7 @@
     <add key="avalonia-ci" value="https://www.myget.org/F/avalonia-ci/api/v3/index.json" />
     <add key="avalonia-prs" value="https://www.myget.org/F/avalonia-prs/api/v3/index.json" />
     <add key="dotnet-core" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" />
+    <add key="nightly" value="https://nuget.avaloniaui.net/repository/avalonia-all/index.json" />
+    <add key="wies" value="https://pkgs.dev.azure.com/wieslawsoltes/GitHub/_packaging/Nightly/nuget/v3/index.json" />
   </packageSources>
 </configuration>
