--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -2,7 +2,7 @@
     "AppSettings": {
         "EnableCustomDb": "False",
         "DbDir": "C:\\Users\\vkoshelev\\Documents\\YT",
-        "DownloadDir": "d:\\YT",
+        "DownloadDir": "c:\\Users\\VKoshelev\\Documents\\YT",
         "YouParser": "youtube-dl",
         "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
         "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
