--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -1,12 +1,12 @@
 {
     "AppSettings": {
         "EnableCustomDb": "False",
-        "DbDir": "C:\\Users\\vkoshelev\\Documents\\YT",
-        "DownloadDir": "c:\\Users\\VKoshelev\\Documents\\YT",
+        "DbDir": "C:\\Users",
+        "DownloadDir": "c:\\Users",
         "YouParser": "youtube-dl",
         "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
         "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
-        "YouApiKey": "AIzaSyA_EH28yYAMb2BkQ5yrf9RoWxheAUihvBo",
+        "YouApiKey": "",
         "EnableDailySyncSchedule": "False",
         "DailySyncSchedule": "06:31",
         "EnableRepeatSyncSchedule": "False",
