--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <clear/>
-        <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json"/>
-        <add key="avalonia-all" value="https://nuget.avaloniaui.net/repository/avalonia-all/index.json"/>
+        <clear />
+        <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
+        <add key="avalonia-all" value="https://nuget.avaloniaui.net/repository/avalonia-all/index.json" />
+        <add key="skia-eap" value="https://aka.ms/skiasharp-eap/index.json" />
     </packageSources>
 </configuration>
