--- a/src/v00v/appsettings.json
+++ b/src/v00v/appsettings.json
@@ -5,7 +5,7 @@
         "DownloadDir": "c:\\Users\\VKoshelev\\Documents\\YT",
         "YouParser": "yt-dlp",
         "WatchApp": "c:\\Program Files\\MPC-BE x64\\mpc-be64.exe",
-        "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir",
+        "YouParam": "--no-check-certificate --console-title --no-call-home --no-cache-dir --sponsorblock-mark all --sponsorblock-remove all",
         "YouApiKey": "AIzaSyA_EH28yYAMb2BkQ5yrf9RoWxheAUihvBo",
         "EnableDailySyncSchedule": "False",
         "DailySyncSchedule": "06:31",
